[iOS] Create TextToSpeechPlaybackController.

Since we no longer are useing the GLIF "talking dots" animations after
enabling the UI refresh flag, there are no UI elements waiting for
TTS notifications.  This CL introduces a KeyedService that handles
listening for TTS notifications, starting playback, and cancelling
playback for WebState and WebStateObserver changes.

Bug: 846769
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I09f5143b26951bb3db4dad58f1a61ee94434785b
Reviewed-on: https://chromium-review.googlesource.com/1095817
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Mark Cogan <marq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573932}
Former-commit-id: ba73c2613a66a6cbce098e06e6925104cb4ce4e4