ios/chrome/browser/browser_state/browser_state_keyed_service_factories.mm
@@ -58,6 +58,7 @@
 #include "ios/chrome/browser/ui/browser_list/browser_list_session_service_factory.h"
 #include "ios/chrome/browser/ui/fullscreen/fullscreen_controller_factory.h"
 #import "ios/chrome/browser/ui/overlays/overlay_service_factory.h"
+#import "ios/chrome/browser/ui/voice/text_to_speech_playback_controller_factory.h"
 #include "ios/chrome/browser/undo/bookmark_undo_service_factory.h"
 #include "ios/chrome/browser/web_data_service_factory.h"
 
@@ -130,4 +131,5 @@ void EnsureBrowserStateKeyedServiceFactoriesBuilt() {
   BrowserDownloadServiceFactory::GetInstance();
   FullscreenControllerFactory::GetInstance();
   OverlayServiceFactory::GetInstance();
+  TextToSpeechPlaybackControllerFactory::GetInstance();
 }
